<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.a.projectapptenno.LoginActivity"

    >
    <ImageView
        android:background="@drawable/login_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.9"
        />
    <LinearLayout
        android:weightSum="6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
    <ImageView
        android:layout_marginTop="110dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:layout_width="213dp"
        android:layout_height="62dp"
        android:src="@drawable/tenno_logo"
        android:id="@+id/img_logo_login"
        android:adjustViewBounds="true"
        />
        <EditText
            android:layout_marginTop="70dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:hint="@string/ext_user_login"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:id="@+id/ext_user_login"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:inputType="text"
            android:layout_weight="1"
            android:textSize="12sp"
            android:background="@drawable/edittext_custom_loginactivity"
            />
        <EditText
            android:textSize="12sp"
            android:layout_marginTop="10dp"
            android:inputType="textPassword"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:hint="@string/ext_password_login"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:id="@+id/ext_password_login"
            android:background="@drawable/edittext_custom_loginactivity"
            />
        <Button
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:text="@string/btn_login_login"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginTop="20dp"
            android:id="@+id/btn_login_login"
            android:layout_weight="1"
            android:layout_marginRight="20dp"
            android:textSize="12sp"
            android:layout_marginLeft="20dp"
            android:background="@drawable/button_custom_loginactivity"
            />
        <TextView
            android:textStyle="bold"
            android:textSize="12sp"
            android:layout_marginTop="60dp"
            android:textColor="#FFFFFF"
            android:gravity="center"
            android:text="@string/txt_signup_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/txt_signup_login"
            />
        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <ImageView
                android:layout_marginRight="15dp"
                android:layout_width="37dp"
                android:layout_height="37dp"
                android:id="@+id/img_fb_login"
                android:layout_weight="1"
                android:src="@drawable/fblogo"
                />
             <ImageView
            android:layout_width="37dp"
            android:layout_height="37dp"
            android:id="@+id/img_gg_login"
            android:layout_weight="1"
            android:src="@drawable/googlelogo"
            />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
